<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/gamelogo"
        android:layout_width = "370sp"
        android:layout_height = "140sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.13"
        android:src = "@drawable/logo"
        >
    </ImageView>

    <TextView
        android:id="@+id/playerSelect"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:text="@string/select_player"
        android:fontFamily="@font/arcadepix"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="27sp"
        >
    </TextView>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/center"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        >

    </androidx.constraintlayout.widget.Guideline>

    <ImageButton
        android:id="@+id/steve"
        android:layout_width = "100sp"
        android:layout_height = "100sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.48"
       app:layout_constraintHorizontal_bias="0.85"
        android:src="@drawable/steve_icon"
        android:adjustViewBounds="true"
        android:padding="8sp"
        android:backgroundTint="@color/white"
        android:scaleType="fitCenter"

        >
    </ImageButton>

    <ImageButton
        android:id="@+id/alex"
        android:layout_width = "100sp"
        android:layout_height = "100sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.48"
        app:layout_constraintHorizontal_bias="0.15"
        android:src="@drawable/alex_icon"
        android:adjustViewBounds="true"
        android:padding="8sp"
        android:backgroundTint="@color/white"
        android:scaleType="fitCenter"

        >
    </ImageButton>

    <TextView
        android:id="@+id/steveText"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.58"
        app:layout_constraintHorizontal_bias="0.84"
        android:text="@string/steve"
        android:fontFamily="@font/arcadepix"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="27sp"
        >
    </TextView>

    <TextView
        android:id="@+id/alexText"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.58"
        app:layout_constraintHorizontal_bias="0.23"
        android:text="@string/alex"
        android:fontFamily="@font/arcadepix"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="27sp"
        >
    </TextView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playGame"
        android:background="@drawable/button"
        android:backgroundTint="@color/green"
        android:text="@string/play"
        android:padding="12dp"
        android:textSize="23sp"
        android:fontFamily="@font/arcadepix"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.73"
        >
    </Button>

    <TextView
        android:layout_width="370sp"
        android:layout_height="70sp"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="23sp"
        android:text="@string/credits"
        android:textColor="@color/white"
        android:fontFamily="@font/lcd_solid"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.96"
        android:shadowDx="8"
        android:shadowDy="8"
        android:shadowRadius="20"
        android:shadowColor="@color/colorPrimaryDark"
        >
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>