<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MineActivity"
    android:background="@drawable/mining_bg">

    <view
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/speedMineGame"
        class="com.leejordan.minecraftboardgame.DrawViewMine"
        >
    </view>

    <ImageView
        android:layout_width="360dp"
        android:layout_height="140dp"
        android:src="@drawable/speedminechallenge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        >
    </ImageView>

    <ImageView
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:src="@drawable/mining_instructions"
        android:id="@+id/instructions"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.23"
        >
    </ImageView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.93"
        android:id="@+id/startMiningGame"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/arcade_pix"
        android:text="@string/startGame1"
        android:textSize="25dp"
        android:padding="12dp"

        >

    </Button>
    <TextView
        android:layout_width="300sp"
        android:layout_height="70sp"
        android:gravity="center_vertical"
        android:textSize="26sp"
        android:text="@string/time"
        android:textColor="@color/white"
        android:fontFamily="@font/lcd_solid"
        android:drawableStart="@drawable/time_icon"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toTopOf="@id/instructions"
        app:layout_constraintBottom_toBottomOf="@id/instructions"
        app:layout_constraintRight_toRightOf="@id/instructions"
        app:layout_constraintLeft_toLeftOf="@id/instructions"
        android:paddingStart="40sp"
        android:id="@+id/miningCountdown"
        >
    </TextView>

    <TextView
        android:layout_width="300sp"
        android:layout_height="70sp"
        android:gravity="center_vertical"
        android:textSize="26sp"
        android:text="@string/blocks"
        android:textColor="@color/white"
        android:fontFamily="@font/lcd_solid"
        android:drawableStart="@drawable/block_icon"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toTopOf="@id/instructions"
        app:layout_constraintBottom_toBottomOf="@id/instructions"
        app:layout_constraintRight_toRightOf="@id/instructions"
        app:layout_constraintLeft_toLeftOf="@id/instructions"
        android:paddingStart="160dp"
        android:id="@+id/blockCount"
        >
    </TextView>



</androidx.constraintlayout.widget.ConstraintLayout>