<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiamondActivity"
    android:background="@drawable/diamond_huntbg"
    >

    <ImageView
        android:id="@+id/mainWindow"
        android:layout_width="380dp"
        android:layout_height="640dp"
        android:src="@drawable/diamond_hunt_instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <ImageView
        android:id="@+id/diamond1A"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/diamond_game_ore"
        app:layout_constraintBottom_toBottomOf="@id/mainWindow"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintLeft_toLeftOf="@id/mainWindow"
        app:layout_constraintRight_toRightOf="@id/mainWindow"
        app:layout_constraintTop_toTopOf="@id/mainWindow"
        app:layout_constraintVertical_bias="0.8785">

    </ImageView>

    <ImageView
        android:id="@+id/diamond1B"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:src="@drawable/diamond_game_ore"
        app:layout_constraintBottom_toBottomOf="@id/mainWindow"
        app:layout_constraintHorizontal_bias="0.1475"
        app:layout_constraintLeft_toLeftOf="@id/mainWindow"
        app:layout_constraintRight_toRightOf="@id/mainWindow"
        app:layout_constraintTop_toTopOf="@id/mainWindow"
        app:layout_constraintVertical_bias="0.752">

    </ImageView>


    <ImageView
        android:id="@+id/diamond1C"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:src="@drawable/diamond_game_ore"
        app:layout_constraintBottom_toBottomOf="@id/mainWindow"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintLeft_toLeftOf="@id/mainWindow"
        app:layout_constraintRight_toRightOf="@id/mainWindow"
        app:layout_constraintTop_toTopOf="@id/mainWindow"
        app:layout_constraintVertical_bias="0.9449">

    </ImageView>

    <ImageView
        android:id="@+id/diamond2A"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/diamond_game_ore2"
        app:layout_constraintBottom_toBottomOf="@id/mainWindow"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintLeft_toLeftOf="@id/mainWindow"
        app:layout_constraintRight_toRightOf="@id/mainWindow"
        app:layout_constraintTop_toTopOf="@id/mainWindow"
        app:layout_constraintVertical_bias="0.61">

    </ImageView>

    <ImageView
        android:id="@+id/diamond2B"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:src="@drawable/diamond_game_ore2"
        app:layout_constraintBottom_toBottomOf="@id/mainWindow"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintLeft_toLeftOf="@id/mainWindow"
        app:layout_constraintRight_toRightOf="@id/mainWindow"
        app:layout_constraintTop_toTopOf="@id/mainWindow"
        app:layout_constraintVertical_bias="0.836">

    </ImageView>

    <ImageView
        android:id="@+id/diamond2C"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:src="@drawable/diamond_game_ore2"
        app:layout_constraintBottom_toBottomOf="@id/mainWindow"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintLeft_toLeftOf="@id/mainWindow"
        app:layout_constraintRight_toRightOf="@id/mainWindow"
        app:layout_constraintTop_toTopOf="@id/mainWindow"
        app:layout_constraintVertical_bias="0.875">

    </ImageView>

    <ImageView
        android:id="@+id/diamond3A"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/diamond_game_ore2"
        app:layout_constraintBottom_toBottomOf="@id/mainWindow"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintLeft_toLeftOf="@id/mainWindow"
        app:layout_constraintRight_toRightOf="@id/mainWindow"
        app:layout_constraintTop_toTopOf="@id/mainWindow"
        app:layout_constraintVertical_bias="0.776">

    </ImageView>


    <ImageView
        android:id="@+id/diamond3B"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/diamond_game_ore2"
        app:layout_constraintBottom_toBottomOf="@id/mainWindow"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintLeft_toLeftOf="@id/mainWindow"
        app:layout_constraintRight_toRightOf="@id/mainWindow"
        app:layout_constraintTop_toTopOf="@id/mainWindow"
        app:layout_constraintVertical_bias="0.872">

    </ImageView>

    <ImageView
        android:id="@+id/diamond3C_chest"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/diamond_game_chest"
        app:layout_constraintBottom_toBottomOf="@id/mainWindow"
        app:layout_constraintHorizontal_bias="0.6095"
        app:layout_constraintLeft_toLeftOf="@id/mainWindow"
        app:layout_constraintRight_toRightOf="@id/mainWindow"
        app:layout_constraintTop_toTopOf="@id/mainWindow"
        app:layout_constraintVertical_bias="0.891">

    </ImageView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.958"
        android:id="@+id/startDiamondGame"
        android:background="@drawable/button"
        android:textColor="@color/white"
        android:backgroundTint="@color/diamond_dark"
        android:fontFamily="@font/arcade_pix"
        android:text="@string/startGame1"
        android:textSize="25dp"
        android:padding="12dp"
        >

    </Button>

    <TextView
        android:layout_width="300sp"
        android:layout_height="70sp"
        android:gravity="center_vertical"
        android:textSize="26sp"
        android:text="@string/diamondTime"
        android:textColor="@color/white"
        android:fontFamily="@font/lcd_solid"
        android:drawableStart="@drawable/time_icon"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="40sp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.58"
        android:id="@+id/diamondCountdown"
        >
    </TextView>

    <TextView
        android:layout_width="300sp"
        android:layout_height="70sp"
        android:gravity="center_vertical"
        android:textSize="26sp"
        android:text="@string/blocks"
        android:textColor="@color/white"
        android:fontFamily="@font/lcd_solid"
        android:drawableStart="@drawable/diamond_icon"
        android:drawablePadding="13dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.63"
        android:paddingStart="160dp"
        android:id="@+id/diamondCount"
        >
    </TextView>


</androidx.constraintlayout.widget.ConstraintLayout>